--- a/public/css/signup-page.css
+++ b/public/css/signup-page.css
@@ -49,8 +49,7 @@ body {
     pointer-events: none;
     transition: .5s;
 }
-.signup-box .user-box input:focus ~ label,
-.signup-box .user-box input:valid ~ label {
+.signup-box .user-box :is(input:not(:placeholder-shown), input:focus) ~ label {
     transform: translateY(-15px);
     color: #03e9f4;
     font-size: 12px;
@@ -82,6 +81,12 @@ body {
     display: block;
 }
 
+.error {
+    font-size: 12px;
+    color: red;
+    margin-top: -25px;
+    margin-bottom: 10px;
+}
 
 /* Navbar CSS */
 .navbar-brand {
